--- a/.travis.yml
+++ b/.travis.yml
@@ -1,15 +1,8 @@
 language: go
 
-os:
-  - linux
-  - osx
-
 # In theory, older versions would probably work just fine
 go:
   - 1.9
-  - 1.8
-  - 1.7
-  - tip
 
 branches:
   only:
@@ -18,7 +11,7 @@ branches:
 before_install:
   - sudo apt-get install -y inotify-tools
 
-# I haven't tested on windows
+# Wasn't teste on windows
 env:
   - GOOS=linux
   - GOOS=darwin
