--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,7 @@
 language: go
 
-# In theory, older versions would probably work just fine
 go:
+  - 1.8
   - 1.9
 
 branches:
@@ -10,6 +10,15 @@ branches:
 
 before_install:
   - sudo apt-get install -y inotify-tools
+
+matrix:
+  allow_failures:
+    - go: tip
+  fast_finish: true
+
+os:
+  - linux
+  - osx
 
 env:
   - GOOS=linux
