--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,9 @@
 language: go
 
 go:
+  - 1.8
   - 1.9
+  - 1.10
 
 branches:
   only:
@@ -11,7 +13,12 @@ matrix:
   allow_failures:
     - go: 1.8
     - go: 1.9
+    - go: 1.10
   fast_finish: true
+
+env:
+  - GOOS=linux
+  - GOOS=darwin
 
 script:
   - go get -u -t ./...
