--- a/.travis.yml
+++ b/.travis.yml
@@ -22,6 +22,13 @@ matrix:
       - go: tip
   fast_finish: true
 
+env:
+  - GOOS=linux
+  - GOOS=darwin
+
+install:
+  - # Do nothing. This is needed to prevent default install action "go get -t -v ./..." from happening here.
+
 script:
   - go get -u -t ./...
 
