--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -38,6 +38,7 @@ jobs:
         if: matrix.os == 'ubuntu-latest'
         run: |
           sudo apt-get install -y libgl1-mesa-dev xorg-dev
+          sudo apt-get update
 
       - name: Checkout code
         uses: actions/checkout@v2
