--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -37,8 +37,8 @@ jobs:
       - name: Install Linux Dependencies
         if: matrix.os == 'ubuntu-latest'
         run: |
+          sudo apt-get update -y
           sudo apt-get install -y libgl1-mesa-dev xorg-dev
-          sudo apt-get update
 
       - name: Checkout code
         uses: actions/checkout@v2
