--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -12,7 +12,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        go-version: [~1.16, ~1.17]
+        go-version: ~1.21
         os: [ubuntu-latest, macos-latest]
     runs-on: ${{ matrix.os }}
     env:
